# devops-rag

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.demo.yaml  docker-compose.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
app/: __init__.py  main.py
app/cli/: __init__.py  config.py  main.py
app/core/: config.py  llm.py
app/core/database/: __init__.py
app/modules/: __init__.py
app/modules/chat/: __init__.py  agent.py  models.py  router.py  schema.py
app/modules/knowledge/: __init__.py  service.py
app/modules/memory/: __init__.py  consolidation.py  extraction.py  manager.py  reflexion.py  stores.py  summarizer.py  types.py
app/modules/notifications/: models.py  router.py  service.py
app/modules/servers/: models.py  router.py  schema.py  service.py
app/modules/users/: __init__.py  router.py  schema.py  service.py
app/web/: router.py
app/web/static/css/: style.css
app/web/static/js/: app.js
app/web/templates/: base.html  dashboard.html  servers.html
scripts/: migrate_add_feedback_columns.py
tests/: test_guardrails.py  test_memory.py
