[project]
name = "devops-rag"
version = "0.1.0"
description = "A modular FastAPI SaaS template styled after NestJS architectural concepts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "sqlmodel>=0.0.22",
    "pyjwt>=2.8.0",
    "aiosqlite>=0.20.0",
    "cryptography>=42.0.0",
    "langchain>=0.2.0",
    "chromadb>=0.5.0",
    "pydantic-settings>=2.2.0",
    "bcrypt>=4.1.0",
    "python-multipart>=0.0.9",
    "greenlet>=3.0.0",
    "langchain-openai>=0.1.0",
    "asyncssh>=2.14.0",
]

[project.scripts]
devops-rag = "app.cli.main:app"

[[project.authors]]
name = "irzix"

# Tool configurations (like ESLint/Prettier configuration blocks in package.json)
[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.setuptools.packages.find]
include = ["app*"]
