[project]
name = "devops-copilot"
version = "0.1.4"
description = "An AI-driven DevOps Copilot and CLI Client for managing bare-metal servers securely"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "sqlmodel>=0.0.22",
    "pyjwt>=2.10.1",
    "aiosqlite>=0.20.0",
    "cryptography>=42.0.0",
    "langchain>=0.2.0",
    "chromadb>=0.5.0",
    "pydantic-settings>=2.7.0",
    "bcrypt>=4.2.1",
    "python-multipart>=0.0.9",
    "greenlet>=3.0.0",
    "jinja2>=3.1.4",
    "langchain-openai>=0.1.0",
    "asyncssh>=2.14.0",
    "langgraph>=0.1.0",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "langsmith>=0.2.0",
]

[project.scripts]
devops-copilot = "app.cli.main:app"

[[project.authors]]
name = "irzix"

# Tool configurations (like ESLint/Prettier configuration blocks in package.json)
[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.setuptools.packages.find]
include = ["app*"]
